--- a/index.html
+++ b/index.html
@@ -26,6 +26,32 @@
 	</nav>
 
 	<div class="container">
+		<h2>About Me</h2>
+		<div class="row">
+			<div class="col-md-7">
+
+				<div class="row">
+					<div class="col-md-4">
+						<img class="aboutImage img-fluid" src="images/me.jpg" alt="stacy areas">
+					</div>
+				
+					<div class="col-md-8">
+						<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc.</p>
+					</div>	
+				</div>
+			</div>
+		
+			<div class="col-md-5">
+				<div class="card border-light mb-3" ">
+		  		<div class="card-header">Connect with me</div>
+		  			<div class="card-body">
+		    			<a href="https://github.com/stacy89"><img src="images/github.png"></a>
+							<a href="https://www.linkedin.com/in/stacyareas/"><img src="images/linkedin.png"></a>
+							<a href="https://stackoverflow.com/users/7371834/stacy-areas"><img src="images/stackoverflow.png"></a>
+		  			</div>
+					</div>
+			</div>
+		</div>		
 
 	</div>	
 </body>
