--- a/index.html
+++ b/index.html
@@ -5,44 +5,39 @@
 	<title>Stacy Areas</title>
 </head>
 <body>
-	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand ml-5" href="#">Stacy Areas</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+	<nav class="navbar navbar-expand-md navbar-light bg-light">
+  <a class="navbar-brand" href="#">Stacy Areas</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  	<div class="collapse navbar-collapse mr-5" id="navbarNav">
-    	<ul class="navbar-nav ml-auto">
-      	<li class="nav-item active">
-        	<a class="nav-link" href="index.html">About</a>
-      	</li>
-      	<li class="nav-item">
-        	<a class="nav-link" href="portfolio.html">Portfolio</a>
-      	</li>
-      	<li class="nav-item">
-        	<a class="nav-link" href="contact.html">Contact</a>
-      	</li>
-    	</ul>
-  	</div>
-	</nav>
+  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+    <div class="navbar-nav ml-auto">
+      <a class="nav-item nav-link active" href="#">About<span class="sr-only">(current)</span></a>
+      <a class="nav-item nav-link" href="#">Portfolio</a>
+      <a class="nav-item nav-link" href="#">Contact</a>
+    </div>
+  </div>
+</nav>
+	
 
 	<div class="container">
 		<h2>About Me</h2>
 		<div class="row">
-			<div class="col-md-7">
-
-				<div class="row">
-					<div class="col-md-4">
-						<img class="aboutImage img-fluid" src="images/me.jpg" alt="stacy areas">
-					</div>
+			<div class="col-md-8">
+  			
+  			<div class="row">
+		  		<div class="col-md-3">
+		  			<img src="images/me.jpg" alt="stacy areas" class="img-thumbnail">
+		  		</div>	
 				
-					<div class="col-md-8">
-						<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc.</p>
-					</div>	
-				</div>
-			</div>
-		
-			<div class="col-md-5">
-				<div class="card border-light mb-3" ">
+					<div class="col-md-9">
+		  			<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+		  		</div>	
+  			</div>
+  		</div>
+
+		  <div class="col-md-4">
+				<div class="card border-light mb-3">
 		  		<div class="card-header">Connect with me</div>
 		  			<div class="card-body">
 		    			<a href="https://github.com/stacy89"><img src="images/github.png"></a>
@@ -50,9 +45,18 @@
 							<a href="https://stackoverflow.com/users/7371834/stacy-areas"><img src="images/stackoverflow.png"></a>
 		  			</div>
 					</div>
-			</div>
-		</div>		
+				</div>
+		</div>			
+  </div>
 
-	</div>	
+  <footer class="fixed-bottom text-center bg-info text-white p-4">
+		<div class="footer-copyright">
+      <div class="container-fluid">copyright © 2018 Stacy Areas</div>
+    </div>
+  </footer>			
+	
+	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" crossorigin="anonymous"></script>
 </body>
 </html>
