add background image -- load fonts

--- a/index.html
+++ b/index.html
@@ -1,26 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link href="https://fonts.googleapis.com/css?family=Limelight|Mallanna|Poiret+One" rel="stylesheet">
+	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
 	<title>Stacy Areas</title>
 </head>
 <body>
-	<nav class="navbar navbar-expand-md navbar-light bg-light">
-  <a class="navbar-brand" href="#">Stacy Areas</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-    <div class="navbar-nav ml-auto">
-      <a class="nav-item nav-link active" href="#">About<span class="sr-only">(current)</span></a>
-      <a class="nav-item nav-link" href="#">Portfolio</a>
-      <a class="nav-item nav-link" href="#">Contact</a>
-    </div>
-  </div>
-</nav>
+	<nav class="navbar navbar-expand-md navbar-light bg-secondary">
+  	<a class="navbar-brand nameHeader text-white" href="<index class="html"></index>">Stacy Areas</a>
+  	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+    	<span class="navbar-toggler-icon"></span>
+  	</button>
+  	<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+    	<div class="navbar-nav ml-auto">
+      	<a class="nav-item nav-link active text-white" href="index.html">About<span class="sr-only">(current)</span></a>
+      	<a class="nav-item nav-link text-white" href="portfolio.html">Portfolio</a>
+      	<a class="nav-item nav-link text-white" href="contact.html">Contact</a>
+    	</div>
+  	</div>
+	</nav>
 	
 
-	<div class="container">
+	<div class="container pt-5">
 		<h2>About Me</h2>
 		<div class="row">
 			<div class="col-md-8">
@@ -36,10 +39,10 @@
   			</div>
   		</div>
 
-		  <div class="col-md-4">
-				<div class="card border-light mb-3">
-		  		<div class="card-header">Connect with me</div>
-		  			<div class="card-body">
+		  <div class="col-md-4 icon-links">
+				<div class="card border-light mb-auto">
+		  		<div class="card-header text-center"><h5>Connect with me</h5></div>
+		  			<div class="card-body text-center">
 		    			<a href="https://github.com/stacy89"><img src="images/github.png"></a>
 							<a href="https://www.linkedin.com/in/stacyareas/"><img src="images/linkedin.png"></a>
 							<a href="https://stackoverflow.com/users/7371834/stacy-areas"><img src="images/stackoverflow.png"></a>
@@ -49,7 +52,7 @@
 		</div>			
   </div>
 
-  <footer class="fixed-bottom text-center bg-info text-white p-4">
+  <footer class="footer text-center bg-dark text-white p-4">
 		<div class="footer-copyright">
       <div class="container-fluid">copyright © 2018 Stacy Areas</div>
     </div>
