--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	
 
 	<div class="container pt-5">
-		<h2>About Me</h2>
+		<h2 class="border border-secondary border-right-0 border-left-0 border-top-0 pb-2 mb-5">About Me</h2>
 		<div class="row">
 			<div class="col-md-8">
   			
