add form to conatct file a

--- a/portfolio.html
+++ b/portfolio.html
@@ -73,10 +73,10 @@
 		  		</div>
 
 		  		<div class="col-md-6">
-						<div class="card card-inverse mb-5">
+						<div class="card card-inverse mb-5 rocko">
   						<img class="card-img" src="images/rocko.jpg" alt="Rock's Modern Life Cast">
   						<div class="card-img-overlay">
-    						<h4 class="card-title text-center bg-light text-dark p-1">Rocko</h4>
+    						<h4 class="card-title text-center bg-light text-dark p-1 rocko">Rocko</h4>
 							</div>
 		  			</div>
 		  		</div>
@@ -96,7 +96,7 @@
 		</div>			
   </div>
 
-	<footer class="footer text-center bg-dark text-white p-4">
+	<footer class="text-center bg-dark text-white p-4">
 		<div class="footer-copyright">
       <div class="container-fluid">copyright © 2018 Stacy Areas</div>
     </div>
